project: add Google Gemini API Project

--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "belajar-gen-ai",
+  "name": "gemini-ai-sandbox",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dedenruslan19/belajar-gen-ai.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Dedenruslan19/belajar-gen-ai/issues"
-  },
-  "homepage": "https://github.com/Dedenruslan19/belajar-gen-ai#readme"
+  "description": "",
+  "dependencies": {
+    "@google/genai": "^1.5.1"
+  }
 }
